Implementation of LocaleUtils for locale resolving, changed naming convention for utility classes to use Utils prefix

--- a/blaze-utils-webapp/src/main/webapp/jobIndex.xhtml
+++ b/blaze-utils-webapp/src/main/webapp/jobIndex.xhtml
@@ -62,8 +62,7 @@
                                     Wert
                                 </f:facet>
                                 <h:inputText id="jobParam" value="#{property.value}">
-                                    <f:validator validatorId="onSubmitValidator"/>
-                                    <f:attribute name="onSubmitRequired" value="#{property.required}"/>
+                                	<f:validateRequired disabled="#{performValidation eq false}"/>
                                 </h:inputText>
                                 <h:message for="jobParam"/>
                             </h:column>
