--- a/blaze-utils-webapp/src/main/webapp/triggerIndex.xhtml
+++ b/blaze-utils-webapp/src/main/webapp/triggerIndex.xhtml
@@ -128,8 +128,7 @@
                                         Wert
                                     </f:facet>
                                     <h:inputText id="triggerParam" value="#{property.value}">
-                                        <f:validator validatorId="onSubmitValidator"/>
-                                        <f:attribute name="onSubmitRequired" value="#{property.required}"/>
+                                		<f:validateRequired disabled="#{performValidation eq false}"/>
                                     </h:inputText>
                                     <h:message for="triggerParam"/>
                                 </h:column>
